--- a/TP06/Views/Home/Index.cshtml
+++ b/TP06/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
-
 <div>
-    <h1>Index</h1>
-    <p>Bienvenidos al sitio web de NombreProyecto</p>
+    <a href="/Account/Registro"><button>Registrarse</button></a>
+    <a href="/Account/Login"><button>Iniciar sesión</button></a>
 </div>
+
