--- a/TP06/Views/Account/Registro.cshtml
+++ b/TP06/Views/Account/Registro.cshtml
@@ -3,5 +3,8 @@
     <input type="text" name="apellido" placeholder="Apellido"/>
     <input type="text" name="username" placeholder="Nombre de usuario"/>
     <input type="password" name="password" placeholder="Crea una contraseña" />
+    <input type="password" name="confirmarPassword" placeholder="Confirmar contraseña" />
     <button type="submit">Registrarse</button>
+
 </form>
+<p class = "error">@ViewBag.error</p>
