--- a/TP06/Views/Account/Login.cshtml
+++ b/TP06/Views/Account/Login.cshtml
@@ -3,7 +3,4 @@
     <input type="password" name="password" placeholder="Contraseña" />
     <button type="submit">Log in</button>
 </form>
-@if (ViewBag.error != null)
-{
-    <p style="color:red;">@ViewBag.error</p>
-}
+<p class = "error">@ViewBag.error</p>
