--- a/TP06/Views/Home/VerTareas.cshtml
+++ b/TP06/Views/Home/VerTareas.cshtml
@@ -1,2 +1,4 @@
-<h1>a</h1>
+<div class = "vertareas">
+<h1>@ViewBag.Usuario.username</h1>
 <img src="@(ViewBag.Usuario != null ? ViewBag.Usuario.foto : "/img/default.jpg")" alt="Foto de usuario" />
+<div>
