--- a/TP06/Views/Account/Login.cshtml
+++ b/TP06/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 <form method="post" action="@Url.Action("LoginGuardar", "Account")"  autocomplete="off">
-    <input type="text" name="username" placeholder="Usuario"/>
-    <input type="password" name="password" placeholder="Contraseña" />
+    <input type="text" name="username" placeholder="Usuario" autocomplete= "off"/>
+    <input type="password" name="password" placeholder="Contraseña" autocomplete= "off"/>
     <button type="submit">Log in</button>
 </form>
 <p class = "error">@ViewBag.error</p>
