sistema de fotos URL

--- a/TP06/Views/Home/Index.cshtml
+++ b/TP06/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Inicio";
 }
-<div>
-    <a href="/Account/Registro"><button>Registrarse</button></a>
-    <a href="/Account/Login"><button>Iniciar sesión</button></a>
-</div>
-
+<section class="index-container">
+    <div>
+        <a href="/Account/Registro"><button>Registrarse</button></a>
+        <a href="/Account/Login"><button>Iniciar sesión</button></a>
+    </div>
+</section>
