editar tarea inicio

--- a/TP06/Views/Home/VerTareas.cshtml
+++ b/TP06/Views/Home/VerTareas.cshtml
@@ -22,6 +22,9 @@
                     <a href="@Url.Action("finalizarTarea", "Home", new { id = tarea.Id })">
                         <button class="btn-secundario">Finalizar Tarea</button>
                     </a>
+                    <a href="@Url.Action("editarTarea", "Home", new { id = tarea.Id })">
+                        <button class="btn-4">Editar Tarea</button>
+                    </a>
                 </div>
             }
         </div>
