--- a/TP06/Views/Home/EditarFoto.cshtml
+++ b/TP06/Views/Home/EditarFoto.cshtml
@@ -1,5 +1,8 @@
 ﻿@namespace TP06.Views.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<a href="@Url.Action("Index", "Home")">
+    <button class="btn-4">Volver a pagina principal</button>
+</a>
 <form method="post" action="@Url.Action("GuardarFotoUrl", "Home")">
     <label for="fotoUrl">Pegá la URL de tu nueva foto:</label>
     <input type="text" id="fotoUrl" name="fotoUrl" placeholder="https://..." required style="width: 100%; margin-top: 10px;" />
