--- a/TP06/Views/Home/editarTarea.cshtml
+++ b/TP06/Views/Home/editarTarea.cshtml
@@ -1,3 +1,6 @@
+<a href="@Url.Action("Index", "Home")">
+    <button class="btn-4">Volver a pagina principal</button>
+</a>
 <form method="post" action="@Url.Action("editarTareaGuardar", "Home")"  autocomplete="off">
     <input type="text" name="titulo" placeholder="Título" autocomplete= "off"/>
     <input type="text" name="descripcion" placeholder="descripción" autocomplete= "off"/>
