--- a/TP06/wwwroot/css/site.css
+++ b/TP06/wwwroot/css/site.css
@@ -229,6 +229,16 @@ button:hover {
 .btn-4:hover {
   background-color: #0056b3;
 }
+.btn-5 {
+  margin-top: 7%;
+  background-color: #ff0000;
+  color: white;
+}
+
+.btn-5:hover {
+  background-color: #b30000;
+}
+b
 
 .error {
     color: red;
