--- a/TP06/Views/Account/Login.cshtml
+++ b/TP06/Views/Account/Login.cshtml
@@ -1,3 +1,6 @@
+<a href="@Url.Action("Index", "Home")">
+    <button class="btn-4">Volver a pagina principal</button>
+</a>
 <form method="post" action="@Url.Action("LoginGuardar", "Account")"  autocomplete="off">
     <input type="text" name="username" placeholder="Usuario" autocomplete= "off"/>
     <input type="password" name="password" placeholder="Contraseña" autocomplete= "off"/>
