--- a/TP06/Views/Account/Registro.cshtml
+++ b/TP06/Views/Account/Registro.cshtml
@@ -1,3 +1,6 @@
+<a href="@Url.Action("Index", "Home")">
+    <button class="btn-4">Volver a pagina principal</button>
+</a>
 <form method="post" action="@Url.Action("RegistroGuardar", "Account")"  autocomplete="off">
     <input type="text" name="nombre" placeholder="Nombre"/>
     <input type="text" name="apellido" placeholder="Apellido"/>
