--- a/TP06/Views/Home/Index.cshtml
+++ b/TP06/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Inicio";
 }
-<section class="index-container">
+<section class="index-container" style="flex-direction: column; gap: 20px; text-align: center;">
+    <h1>Bienvenido a tu gestor de tareas</h1>
+    <p>Organiza tus tareas fácilmente y mantén todo bajo control.</p>
     <div>
         <a href="/Account/Registro"><button>Registrarse</button></a>
         <a href="/Account/Login"><button>Iniciar sesión</button></a>
