--- a/TP06/Views/Home/VerTareas.cshtml
+++ b/TP06/Views/Home/VerTareas.cshtml
@@ -1,5 +1,5 @@
-<a href="@Url.Action("Index", "Home")">
-    <button class="btn-4">Volver a pagina principal</button>
+<a href="@Url.Action("CerrarSesion", "Account")">
+    <button class="btn-4">Cerrar Sesion</button>
 </a>
 <section class="vertareas">
     <div class="usuario-info">
